tests/paczka1/small_fuzzy/56171797.err
Error in line 9: fCzg3o A0 52,9
Error in line 14: ?A0
